Debug in IntegrationXmlHttpClient.java.